# benchmark-python-web

./: readme.md
falcon/: README.rst  manage.py  pyproject.toml
falcon/app/: __init__.py  __version__.py  app.py  connections.py  wsgi.py
falcon/app/config/: __init__.py  config.py
falcon/app/controllers/: users_controller.py
falcon/app/database/: base.py  database.py  pycrudorm.py
falcon/app/database/models/: sqla_models.py
falcon/app/database/sql/: db-creation.sql  users.sql
falcon/app/lib/: exceptions.py  middleware.py  validation.py
falcon/app/models/: users_models.py
falcon/data/: vmprof.db
falcon/falcon.egg-info/: PKG-INFO  SOURCES.txt
falcon/tests/: test_falcon.py
fastapi-encode/: .bumpversion.cfg  .dist.env  README.md  alembic.ini  pyproject.toml  run.sh  vmprof.ini
fastapi-encode/app/: main.py  manage.py
fastapi-encode/app/api/: api.py  servicesfac.py
fastapi-encode/app/api/endpoints/: routes_users.py
fastapi-encode/app/core/: config.py  prestart.sh
fastapi-encode/app/domain/users/: users_service.py
fastapi-encode/app/infrastructure/database/ddl/: main.sql  migrations.py
fastapi-encode/app/infrastructure/database/migrations/: env.py
fastapi-encode/app/infrastructure/database/migrations/versions/: 1a770a2b299a_.py
fastapi-encode/app/infrastructure/database/models/: users.py
fastapi-encode/app/infrastructure/database/queries/: user.py
fastapi-encode/app/utils/: middleware.py  migrations.py
fastapi-encode/setup/docker/: docker-compose.yml
