[tool.poetry]
name = "falcon-perf"
version = "0.1.0"
description = ""
authors = ["Nicolas Paris <nicolas@cldcvr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
falcon = "^2.0.0"
sqlalchemy = "^1.3.18"
attr = "^0.3.1"
gunicorn = "^20.0.4"
click = "^7.1.2"
related = "^0.7.2"
werkzeug = "^1.0.1"
rollbar = "^0.15.0"
falcon_cors = "^1.1.7"
falcon_auth = "^1.1.0"
ddtrace = "^0.41.0"
psycopg2-binary = "^2.8.5"
ipdb = "^0.13.3"
rapidjson = "^1.0.0"
python-rapidjson = "^0.9.1"
falcon-swagger-ui = "^1.2.1"
vmprof = "^0.4.15"
py-spy = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
